<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/menu_logo"/>

    <TextView
        android:id="@+id/li_news_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:gravity="center"
        android:padding="@dimen/padding_middle"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:text="@string/label_full_name"
        android:textAppearance="@style/BaltMed.TextAppearance.Title"
        android:textColor="@color/colorAccent"/>

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>

            <ImageView
                android:id="@+id/li_main_header_iv_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_middle"
                android:src="@drawable/btn_services"/>

            <ImageView
                android:id="@+id/li_main_header_iv_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_middle"
                android:src="@drawable/btn_subscribe"/>

            <ImageView
                android:id="@+id/li_main_header_iv_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_middle"
                android:src="@drawable/btn_prices"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/li_main_header_tv_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_middle"
                android:text="@string/ttl_services"
                android:textAppearance="@style/BaltMed.TextAppearance.Title"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/li_main_header_tv_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_middle"
                android:text="@string/ttl_make_appointment"
                android:textAppearance="@style/BaltMed.TextAppearance.Title"
                android:textColor="@color/orange"/>

            <TextView
                android:id="@+id/li_main_header_tv_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_middle"
                android:text="@string/ttl_prices"
                android:textAppearance="@style/BaltMed.TextAppearance.Title"
                android:textColor="@color/colorAccent"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/li_main_header_tv_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_xlarge"
        android:background="@drawable/bg_btn_call_orange"
        android:text="@string/label_call_us"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>